/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * The Havenask Contributors require contributions made to
 * this file be licensed under the Apache-2.0 license or a
 * compatible open source license.
 *
 */

apply plugin: 'havenask.internal-cluster-test'

havenaskplugin {
  description 'Havenask engine module'
  classname 'org.havenask.engine.HavenaskEnginePlugin'
}

dependencies {
  api "com.alibaba:fastjson:1.2.68.noneautotype"
}

internalClusterTest {
  systemProperty 'tests.security.manager', 'false'
}

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
